--- a/package.json
+++ b/package.json
@@ -10,10 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "19.2.0",
-    "react-native": "0.83.1",
+    "@gorhom/bottom-sheet": "^5.2.8",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/slider": "^5.1.1",
     "@react-native/new-app-screen": "0.83.1",
-    "react-native-safe-area-context": "^5.5.2"
+    "i18next": "^25.7.3",
+    "react": "19.2.0",
+    "react-i18next": "^16.5.0",
+    "react-native": "0.83.1",
+    "react-native-gesture-handler": "^2.30.0",
+    "react-native-localize": "^3.6.0",
+    "react-native-reanimated": "^4.2.1",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-worklets": "^0.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
